deepCopy() always copies the same way - status can't be skipped